--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,1 +1,12 @@
-<h2>nested</h2>
+<!DOCTYPE HTML>
+<html>
+
+<head>
+    <body>
+        <div id="chartContainer1" style="height: 360px; width: 100%;"></div>
+        <div id="chartContainer2" style="height: 360px; width: 100%;"></div>
+    </body>
+    <script src="js/canvasjs.min.js"></script>
+    <script src="js/helpers.js"></script>
+    <script src="js/main.js"></script>
+</html>
