--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -2,11 +2,33 @@
 <html>
 
 <head>
-    <body>
-        <div id="chartContainer1" style="height: 360px; width: 100%;"></div>
-        <div id="chartContainer2" style="height: 360px; width: 100%;"></div>
-    </body>
-    <script src="js/canvasjs.min.js"></script>
-    <script src="js/helpers.js"></script>
-    <script src="js/main.js"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+</head>
+
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-3">
+                <h2>Trials</h2>
+                <ul class="list-group">
+                    <li class="list-group-item active">Cras justo odio</li>
+                    <li class="list-group-item">Dapibus ac facilisis in</li>
+                    <li class="list-group-item">Morbi leo risus</li>
+                    <li class="list-group-item">Porta ac consectetur ac</li>
+                    <li class="list-group-item">Vestibulum at eros</li>
+                </ul> 
+            </div>
+            <div class="col-sm-9">
+                <div id="chartContainer1" style="height: 360px; width: 100%;"></div>
+                <div id="chartContainer2" style="height: 360px; width: 100%;"></div>
+            </div>
+        </div>
+    </div>
+</body>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js" integrity="sha384-u/bQvRA/1bobcXlcEYpsEdFVK/vJs3+T+nXLsBYJthmdBuavHvAW6UsmqO2Gd/F9" crossorigin="anonymous"></script>
+<script src="js/canvasjs.min.js"></script>
+<script src="js/helpers.js"></script>
+<script src="js/main.js"></script>
+
 </html>
