--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,8 +3,10 @@
 
 <head>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <style>
+     .chart {height:360px; width:100%;}
+    </style>
 </head>
-
 <body>
     <div class="container">
         <div class="row">
@@ -20,11 +22,8 @@
                 </ul>
             </div>
             <div class="col-sm-9">
-                <div v-cloak id="selected_trial">
-                    {{trial._id}}
-                </div>
-                <div id="red_led_chart" style="height: 360px; width: 100%;"></div>
-                <div id="ir_led_chart" style="height: 360px; width: 100%;"></div>
+                <div id="red_led_chart" class="chart"></div>
+                <div id="ir_led_chart" class="chart"></div>
             </div>
         </div>
     </div>
