--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,9 +4,14 @@
 <head>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <style>
-     .chart {height:360px; width:100%;}
+        .chart {
+            height: 360px;
+            width: 100%;
+            display: inline-block;
+        }
     </style>
 </head>
+
 <body>
     <div class="container">
         <div class="row">
@@ -22,8 +27,7 @@
                 </ul>
             </div>
             <div class="col-sm-9">
-                <div id="wrist_red_led_chart" class="chart"></div>
-                <div id="wrist_ir_led_chart" class="chart"></div>
+                <div id="wrist_device" class="chart"></div>
                 <div id="ground_truth" class="chart"></div>
             </div>
         </div>
