Join LEDS, allow xy zoom but only match to x

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -7,7 +7,7 @@
         .chart {
             height: 360px;
             width: 100%;
-            display: inline-block;
+            display: block;
         }
     </style>
 </head>
@@ -28,6 +28,7 @@
             </div>
             <div class="col-sm-9">
                 <div id="wrist_device" class="chart"></div>
+                <div id="fingertip_sensor" class="chart"></div>
                 <div id="ground_truth" class="chart"></div>
             </div>
         </div>
