Memoize algorithm functions for caching and display algorithms in graphs

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -28,7 +28,9 @@
             </div>
             <div class="col-sm-9">
                 <div id="wrist_device" class="chart"></div>
+                <div id="wrist_device_algos" class="chart"></div>
                 <div id="fingertip_sensor" class="chart"></div>
+                <div id="fingertip_sensor_algos" class="chart"></div>
                 <div id="ground_truth" class="chart"></div>
             </div>
         </div>
